[#164] Use server-side sessions to store edited vocabularies.